2008-08-08  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/extensions/Metrics.py:

	When doing the first checkout in svn, we need to do it for the
	first revision of every top level dir.
	
2008-08-07  Santiago Dueñas Domínguez  <sduenas@gsyc.escet.urjc.es>

	* pycvsanaly2/extensions/Metrics.py:

	Typo fixed.

2008-07-30  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/extensions/Metrics.py:

	Instead of checking out the whole repository, download only the
	toplevel directories and update them when needed. It fixes the
	problems with the apache svn.
	
2008-07-29  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/extensions/Metrics.py:

	Add support for python metrics using pymetrics program.
	
2008-07-28  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/extensions/Metrics.py:

	Use find_program to look for the commands and raise and exception
	when the command is not found in path.
	
2008-07-22  Liliana Tovar <lilitovar@gsyc.es>

	* db/cvsanaly2_model_dbdesigner.png
	* db/cvsanaly2_model_dbdesigner.sql
	* db/cvsanaly2_model_dbdesigner.xml
	
	Added database schema.
	
2008-07-21  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/DBContentHandler.py:
	* pycvsanaly2/Database.py:

	Add branches table.
	
2008-07-21  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/Repository.py:
	* pycvsanaly2/Parser.py:
	* pycvsanaly2/CVSParser.py:
	* pycvsanaly2/GitParser.py:
	* pycvsanaly2/SVNParser.py:

	Save also the branch name where an action was done.
	
2008-07-16  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/extensions/Metrics.py:

	Make Metrics extension extensible to other languages, although
	ansic is still the only one supported.
	
2008-07-15  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/extensions/Metrics.py:

	Do not update files in SVN but trees for every affected
	revision. It drastically improves performance.
	